--- a/notebooks/3-corpus_generation.ipynb
+++ b/notebooks/3-corpus_generation.ipynb
@@ -701,7 +701,7 @@
     "SCRAPED_BY = 'sam'\n",
     "\n",
     "startIndex = BATCH_NO * 100\n",
-    "endIndex = start_1 + 100\n",
+    "endIndex = startIndex + 100\n",
     "\n",
     "print(f'Getting Dataset From {startIndex} to {endIndex} ')\n",
     "\n",
