--- a/notebooks/work report.ipynb
+++ b/notebooks/work report.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f3748a26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ac9c9edb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "364b49de",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +285,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b5eec3f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +297,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e7d716e6",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +317,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "d74e8dfe",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +582,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ffcd1d72",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +602,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6d4ea2cd",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +622,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0e8f2b39",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +642,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a7512cec",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +661,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7d4c406",
    "metadata": {},
    "source": [
     "# Split Based on Domains \n",
@@ -688,7 +677,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "689cc5a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +685,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b08e93a",
    "metadata": {},
    "source": [
     "### 20 News articles from a source\n",
@@ -715,7 +702,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95ccd189",
    "metadata": {},
    "source": [
     "# Split based on reference \n",
@@ -739,7 +725,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2f1dfd10",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +747,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "5e444471",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +756,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "aba0ca49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +771,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "84f979aa",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +791,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4a163d29",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +811,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b3fe9a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -838,7 +818,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -852,7 +832,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
