filter domains(over 20)

--- a/chaos notes/filter domain.ipynb
+++ b/chaos notes/filter domain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "d214cb11",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "594f3da8",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
        "4  50°38′N 29°55′E  2022-04-04 09:50:58  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "015b6d6b",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "85e5549e",
    "metadata": {},
    "outputs": [
@@ -321,22 +321,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "id": "4f8c5cca",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [82]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msize\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m=\u001b[39m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mart_extracted_domain\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mart_extracted_domain\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m=\u001b[39mdf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mart_extracted_domain\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(df(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msize\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mart_extracted_domain\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#df['size']=df['art_extracted_domain'].size()\n",
     "#df['art_extracted_domain']=df['art_extracted_domain'].append(df('size'))\n",
@@ -345,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "3b2b8443",
    "metadata": {},
    "outputs": [
@@ -377,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "id": "d175f3a5",
    "metadata": {},
    "outputs": [
@@ -387,7 +375,7 @@
        "489"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "id": "533628a3",
    "metadata": {},
    "outputs": [
@@ -409,7 +397,7 @@
        "1"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "id": "86740858",
    "metadata": {},
    "outputs": [
@@ -453,32 +441,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "474961f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    art_extracted_domain    0\n",
+      "0        www.nytimes.com  489\n",
+      "1            www.cnn.com  412\n",
+      "2    www.theguardian.com  258\n",
+      "3        www.reuters.com  217\n",
+      "4      www.aljazeera.com  181\n",
+      "..                   ...  ...\n",
+      "897  warsawinstitute.org    1\n",
+      "898        wdnyradio.com    1\n",
+      "899           weartv.com    1\n",
+      "900        weisradio.com    1\n",
+      "901              zoso.ro    1\n",
+      "\n",
+      "[902 rows x 2 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/c8/z7rkgj2x1fz_257xzx4c_vdh0000gn/T/ipykernel_29084/1858034098.py:2: FutureWarning: Explicitly passing `name=None` currently preserves the Series' name or uses a default name of 0. This behaviour is deprecated, and in the future `None` will be used as the name of the resulting DataFrame column.\n",
+      "  domain = a.reset_index(level=None, drop=False, name=None, inplace=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add size to column\n",
+    "domain = a.reset_index(level=None, drop=False, name=None, inplace=False)\n",
+    "print(domain)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "7b50406c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get domain list (over 20)\n",
+    "domain_list = []\n",
+    "for n in range(902):\n",
+    "    domain[0][n].dtype == 'int'\n",
+    "    temp = domain[0][n]\n",
+    "    if temp > 20:\n",
+    "        domain_list.append(df['art_extracted_domain'][n])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "9101bfd2",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['www.businessinsider.com',\n",
+       " 'www.theguardian.com',\n",
+       " 'news84media.com',\n",
+       " 'eaworldview.com',\n",
+       " 'charter97.org',\n",
+       " 'www.spamchronicles.com',\n",
+       " 'eturbonews.com',\n",
+       " 'www.nytimes.com',\n",
+       " 'rubryka.com',\n",
+       " 'indianexpress.com',\n",
+       " 'www.themoscowtimes.com',\n",
+       " 'www.thestar.com',\n",
+       " 'www.staradvertiser.com',\n",
+       " 'www.thenationalnews.com',\n",
+       " 'www.worldinwar.eu',\n",
+       " 'www.scoopnest.com',\n",
+       " 'metallicman.com',\n",
+       " 'metallicman.com',\n",
+       " 'www.nytimes.com',\n",
+       " 'edition.cnn.com',\n",
+       " 'edition.cnn.com',\n",
+       " 'www.rferl.org',\n",
+       " 'www.rferl.org',\n",
+       " 'www.aljazeera.com',\n",
+       " 'www.newsnationnow.com',\n",
+       " 'www.rutlandherald.com',\n",
+       " 'news84media.com',\n",
+       " 'news84media.com',\n",
+       " 'www.reuters.com',\n",
+       " 'www.usnews.com',\n",
+       " 'www.businessinsider.com',\n",
+       " 'www.telegraph.co.uk',\n",
+       " 'hindustannewshub.com',\n",
+       " 'www.ny1.com',\n",
+       " 'www.voanews.com',\n",
+       " 'www.glasamerike.net',\n",
+       " 'thehill.com',\n",
+       " 'www.politico.eu',\n",
+       " 'www.nytimes.com',\n",
+       " 'www.cnn.com',\n",
+       " 'www.nytimes.com',\n",
+       " 'www.nytimes.com',\n",
+       " 'www.space.com',\n",
+       " 'www.livescience.com',\n",
+       " 'nypost.com',\n",
+       " 'www.sciencetimes.com',\n",
+       " 'www.dw.com',\n",
+       " 'www.theguardian.com',\n",
+       " 'www.reuters.com',\n",
+       " 'www.huffpost.com']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# domain_list\n",
+    "domain_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4d35059c",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame(domain_list)\n",
+    "df.to_csv('../data/processed/domain_list(over 20).csv')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d35059c",
+   "id": "2612e1ec",
    "metadata": {},
    "outputs": [],
    "source": []
