--- a/notebooks/2-find_reporting.ipynb
+++ b/notebooks/2-find_reporting.ipynb
@@ -423,7 +423,7 @@
     "        if(token.pos_ in pos_tag):\n",
     "            result.append(token.text)\n",
     "                \n",
-    "    return result # 5"
+    "    return result "
    ]
   },
   {
