--- a/notebooks/99 - Data Cleanup .ipynb
+++ b/notebooks/99 - Data Cleanup .ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "af532826",
+   "id": "d4f8434d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "76606d28",
+   "id": "273aec79",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b08698ed",
+   "id": "2e5b7177",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6a76a928",
+   "id": "f895bf7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "8c3175ea",
+   "id": "98a62b88",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "e9579036",
+   "id": "d324760e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "24f25f0c",
+   "id": "172d55c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "34f886e8",
+   "id": "0c35078d",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "115ed2be",
+   "id": "a445f37e",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70f80a4b",
+   "id": "1432c630",
    "metadata": {},
    "source": [
     "# Getting the most scraped news sources"
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "676f2364",
+   "id": "184e32db",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "0088a8d4",
+   "id": "59892c8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "1c5a7698",
+   "id": "dcb51a3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "046fd476",
+   "id": "ec513e4a",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67034546",
+   "id": "43e9b3d2",
    "metadata": {},
    "source": [
     "# Cleaning "
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "6dc4ac96",
+   "id": "465b8c95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "4636eeed",
+   "id": "9347ef67",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "fd8c609c",
+   "id": "3df89346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "a9312fe7",
+   "id": "196c540b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "81bd9002",
+   "id": "4d8a2995",
    "metadata": {},
    "outputs": [
     {
@@ -603,15 +603,17 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "fc2eb512",
+   "id": "4411737e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "holds 19 16 \n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "1ac29206",
+   "id": "eb1897b9",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98843518",
+   "id": "049b05d7",
    "metadata": {},
    "source": [
     "## from IPython.display import clear_output\n",
@@ -777,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "a0762141",
+   "id": "fcf517df",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "e14f812b",
+   "id": "20d40d1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "b0d93c3f",
+   "id": "a8020de7",
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b301947d",
+   "id": "4f279275",
    "metadata": {},
    "outputs": [],
    "source": []
