--- a/notebooks/5-topic-modelling.ipynb
+++ b/notebooks/5-topic-modelling.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "923a8f8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "efd235f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "daf1bb9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "2b5c0daf",
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "74cdc802",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "a8f60acf",
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "84c404f5",
    "metadata": {},
    "outputs": [
     {
@@ -204,6 +211,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c51d675",
    "metadata": {},
    "source": [
     "# Tokenize Sentences and Clean"
@@ -212,6 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "60fd8ca5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "4de21036",
    "metadata": {},
    "outputs": [
     {
@@ -2084,6 +2094,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "485af400",
    "metadata": {},
    "source": [
     "# Build the Bigram, Trigram Models and Lemmatize\n",
@@ -2096,6 +2107,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "aa5c1b6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2109,6 +2121,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "f0858bf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,6 +2145,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "fed1ea07",
    "metadata": {},
    "outputs": [
     {
@@ -3080,6 +3094,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db9478b4",
    "metadata": {},
    "source": [
     "# Build the Topic Model\n",
@@ -3089,6 +3104,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "dab0b7f8",
    "metadata": {},
    "outputs": [
     {
@@ -3138,6 +3154,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cb44f4a3",
    "metadata": {},
    "source": [
     "# Attention\n",
@@ -3149,6 +3166,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "f7396554",
    "metadata": {},
    "outputs": [
     {
@@ -3299,6 +3317,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e753f097",
    "metadata": {},
    "source": [
     "# get samples of sentences that most represent a given topic."
@@ -3307,6 +3326,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "73336c58",
    "metadata": {},
    "outputs": [
     {
@@ -3408,6 +3428,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "5089e95d",
    "metadata": {},
    "outputs": [
     {
@@ -3445,6 +3466,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "b0dccc0e",
    "metadata": {},
    "outputs": [
     {
@@ -3493,6 +3515,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "ecab1d8d",
    "metadata": {},
    "outputs": [
     {
@@ -3543,6 +3566,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
+   "id": "4bacc52d",
    "metadata": {},
    "outputs": [
     {
@@ -3568,6 +3592,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
+   "id": "c5dc47ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3577,6 +3602,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
+   "id": "e4d1a0e1",
    "metadata": {},
    "outputs": [
     {
@@ -3598,6 +3624,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
+   "id": "4e873637",
    "metadata": {},
    "outputs": [
     {
@@ -3637,6 +3664,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
+   "id": "f0602735",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3668,6 +3696,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "e810e36b",
    "metadata": {},
    "outputs": [
     {
@@ -3705,6 +3734,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
+   "id": "4e592dc9",
    "metadata": {},
    "outputs": [
     {
@@ -9754,6 +9784,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "b11ae9a2",
    "metadata": {},
    "outputs": [
     {
@@ -9832,6 +9863,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
+   "id": "833e9edf",
    "metadata": {},
    "outputs": [
     {
@@ -9858,6 +9890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3b7306df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -9865,6 +9898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4023d9cf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -9872,6 +9906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3d575d5c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -9879,7 +9914,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -9893,7 +9928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
